@@ -1,5 +1,9 @@
 2005-06-02  Derek Price  <derek@ximbiot.com>
 
+	* sanity.sh (config): Simplify cleanup.
+
+2005-06-02  Derek Price  <derek@ximbiot.com>
+
 	* zlib.c (compress_buffer_input): Don't request more bytes from the
 	underlying buffer than asked for.
 	(compress_buffer_shutdown_input): Don't attempt to read EOF from the
